--- a/back/config/init/items.yaml
+++ b/back/config/init/items.yaml
@@ -33,7 +33,7 @@ kaamelott:
   width: 30.2%
   height: 28.2%
   borderradius: 0%
-  picture1: "http://3.238.70.10/images/kaamelott.png"
+  picture1: "http://3.238.70.10/images/kaamelott.jpg"
   status: 0
   type: clickable
   description1: "Le gras, c'est la vie !"
