--- a/back/config/init/items.yaml
+++ b/back/config/init/items.yaml
@@ -50,7 +50,7 @@ carlin:
   picture1: "http://3.238.70.10/images/carlin.png"
   status: 0
   type: clickable
-  description1: 
+  description1: ""
 
 # TODO : Trouver l'énigme du Carlin + photo + description (Franck MIB)
 
